# Selfie-Gif-Creator

./: .gitignore  Dockerfile  README.md  install_ffmpeg.sh  local.env  main.py  pyproject.toml  selfie_gif_script.py
.github/workflows/: main.yml
docker-test/: Dockerfile  IMG_2129.HEIC  app.py  install_ffmpeg.sh  pyproject.toml
docker-test/src/core/: make_movie.py  prepare_images.py
docker-test/src/primary_adapters/: lambda_function.py
docker-test/src/secondary_adapters/: image_format_readers.py
src/core/: constants.py  get_image_date.py  main.py  make_movie.py  prepare_images.py  prepare_images_and_make_movie.py  utils.py
src/ports/: image_format_reader.py  image_manipulator.py  image_metadata_reader.py  supported_image_formats.py  video_processor.py
src/primary_adapters/: cli.py  lambda_function.py  preprocess_image_lambda.py  process_and_append_images_lambda.py
src/secondary_adapters/: image_format_readers.py  image_manipulators.py  image_metadata_readers.py  video_processors.py
