[tool.poetry]
name = "selfie-movie-maker"
version = "0.1.0"
description = ""
authors = ["Josh Clark"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyheif = "^0.7.1"
exifread = "^3.0.0"
pillow = "^10.0.0"
wand = "^0.6.11"
whatimage = "^0.0.3"
pylint = "^2.17.5"
pillow-heif = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
