[tool.poetry]
name = "selfie-movie-maker"
version = "0.1.0"
description = ""
authors = ["Josh Clark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"
pyheif = "^0.7.1"
exifread = "^3.0.0"
wand = "^0.6.11"
whatimage = "^0.0.3"
pillow-heif = "^0.12.0"

[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
isort = "^5.12.0"

[build-system]
# This is tied to the poetry version in the Dockerfile
# Don't chage this without changing that
requires = ["poetry-core==1.5.1"]
build-backend = "poetry.core.masonry.api"
