[tool.poetry]
name = "selfie-movie-maker"
version = "0.1.0"
description = ""
authors = ["Josh Clark"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"

[tool.poetry.group.preprocess.dependencies]
pyheif = "^0.7.1"
exifread = "^3.0.0"
whatimage = "^0.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.17.5"
isort = "^5.12.0"

# This is here to document that we're using a custom version of boto3/botocore.
# ("custom" meaning not the default one that the Lambda Python 3.10 runtime uses)
# This line doesn't actually impact which versions are installed.
# See the Dockerfile for the command that installs the custom boto3/botocore.
[tool.poetry.group.custom-boto3.dependencies]
boto3 = "1.28.62"
botocore = "1.31.62"

[build-system]
# This is tied to the poetry version in the Dockerfile
# Don't chage this without changing that
requires = ["poetry-core==1.5.1"]
build-backend = "poetry.core.masonry.api"
